# TravelWallet

./: .gitignore  AGENTS.md  README.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: providers.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/providers/: base.py  playwright_browser.py  registry.py  storage.py
backend/app/providers/hotels/: hyatt.py  marriott.py
backend/tests/: test_providers.py
docs/: project-approach.md  session-summary.md  supabase.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  App.test.jsx  index.css
frontend/src/data/: home.json
frontend/src/lib/: config.js  supabase.js
