[project]
name = "travelwallet-backend"
version = "0.1.0"
description = "TravelWallet backend API"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.24",
  "sqlalchemy>=2.0",
  "pydantic-settings>=2.2",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "pytest>=8.0",
  "httpx>=0.26",
  "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
